# youtube-playlist-manager

./: .gitignore  README.md  pyproject.toml
src/playlist_importer/: __init__.py  main.py
